subwl hole arrays reformul

--- a/result.tex
+++ b/result.tex
@@ -981,7 +981,7 @@ The dielectric permittivity contrast of at least 50 appears to be crucial for ob
 Construction of an optical or near-infrared metamaterial restricts the choice of permittivity compared to the terahertz range. 
 The permittivity of silicon, $\epsrl \approx 12$, is one of the highest available in the near infrared range. The band structure corresponding to $\epsrl=12$ (Fig. \ref{fg_drawn50_12}b) shows that for any unit cell size, the Mie resonance in silicon rod array would  always be preceded by a Bragg band gap. 
 
-Figs. \ref{fg_drawn100} \ref{fg_drawn100} and \ref{fg_fxplot} show that dielectric rods do not have to be geometrically touching to start behaving like a 1-D PhC. This is in line with the observation that the scattering cross-section of sub-wavelength objects tends to be greater than their geometrical extent, in particular close to resonances.
+Figs. \ref{fg_drawn100}, \ref{fg_drawn100} and \ref{fg_fxplot} show that dielectric rods do not have to be geometrically touching to start behaving like a 1-D PhC. This is in line with the observation that the scattering cross-section of sub-wavelength objects tends to be greater than their geometrical extent, in particular close to resonances.
 
 Strong enough near-field interaction is sufficient for a topological change of nodal planes, and the exact critical ratio of the radius to the unit cell size $\rho/a > 0.5$ depends on the dielectric permittivity. This qualitative change occurs for a particularly low filling fraction in the array of rods parallel to the electric field, but it should occur in other kinds of structures, provided their unit cells are so small to promote strong near-field interaction of neigbouring resonant elements.
 
@@ -996,7 +996,7 @@ A was studied recently in Ref. \cite{rybin2014photonic}; again the Mie resonance
 Ref. \cite{peng2007} presents a wedge-refraction experiment with a similar metamaterial, made of square bars parallel to the electric field. The bars have a very high permittivity of $\epsrl=600$, but still the geometry of the bars is equivalent to the \textit{dense array} of cylindrical rods $a/\rho \sim 4.5$. Thus it should exhibit no individual resonances and no negative index of refraction. However, as the major result of the paper \cite[Fig. 3bc]{peng2007} it is demonstrated that negative refraction occurs at the wedge, and moreover it is more or less maintained upon randomization of the rod positions.
 The clash can be explained by a relatively big angle of the wedge around 20$^\circ$, which actually prevents the use of effective index of refraction. % write why the randomization does not cancel the negative refraction
 
-The relevant references (\ref{shi2007, peng2007, vynck2009all, rybin2014photonic, dominec2014transition}) come from the last ten years, although they are based on experimental and numerical methods that could be used already several decades ago. This confirms the author's view that the publications are incited by relatively recent merging of the \textit{metamaterial} and \textit{photonic crystal} paradigms (see Fig. \ref{fg_mm_phc_diagram}).
+The relevant papers (Refs. \cite{shi2007, peng2007, vynck2009all, rybin2014photonic, dominec2014transition}) come from the last ten years, although they are based on experimental and numerical methods that could be used already several decades ago. This confirms the author's view that the publications are incited by relatively recent merging of the \textit{metamaterial} and \textit{photonic crystal} paradigms (see Fig. \ref{fg_mm_phc_diagram}).
 
 %}}}
 \paragraph{Implications for all-dielectric negative-index metamaterials} %{{{
@@ -1221,12 +1221,11 @@ The s-parameter method computes the same metallic structure, and only the phase 
 
 
 \paragraph{Extraordinary transmission} %{{{
-A natural modification of the structure discussed  above is to add conductive connections between the metallic stripes, forming a perforated metallic sheet which is often denoted as a \textit{mesh} in the literature, or within the context of metamaterials, as a \textit{fishnet} or a \textit{sub-wavelength hole array}. Already in 1950s the perforated sheets were proposed to form an artificial dielectric \cite[p. 58]{brown1953artificial} with index of refraction lower than 1, but the electromagnetic wave was supposed to propagate parallel to the slabs and the operation was different.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
-The spectral selectivity of a metallic mesh perpendicular to the wave vector was employed in 1960s as a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  %% TODO rewrite historical, connect with slits?
+A natural modification of the structure discussed  above is to add conductive connections between the metallic stripes to form a perforated metallic sheet which is also denoted as a \textit{mesh}, \textit{sub-wavelength hole array}, or within the context of metamaterials, as a \textit{fishnet}. Already in 1950s the perforated sheets were proposed to form an artificial dielectric \cite[p. 58]{brown1953artificial} with index of refraction lower than 1, but the electromagnetic wave was supposed to propagate parallel to the slabs and the operation was different.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
+The spectral selectivity of a metallic mesh perpendicular to the wave vector was employed in 1960s as a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  
 
-Greater attention of scientific community returned to the perforated metallic sheets with the advent of plasmonics. Periodic patterning of the metallic surface near a sub-wavelength hole enables the incident light to couple to surface plasmons, transfer the energy through the hole, and finally re-radiate it again at the rear side in a similar way as described on the example of metallic slits. 
-The transmitted power can be orders of magnitude higher than would be estimated from the hole dimensions.  % predicted by Bethe's law of inverse fourth power of 
-The phenomenon was thus named as \textit{extraordinary transmission} \cite{ebbesen1998extraordinary}.
+The research into sub-wavelength hole arrays was revived with the advent of plasmonics, since periodic patterning of the metallic surface near a sub-wavelength hole was shown to enable the \textit{extraordinary optical transmission} (EOT) which can be orders of magnitude higher than that estimated from the hole dimensions \cite{ebbesen1998extraordinary}. The mechanism of EOT is similar to that described above; the incident light couples to surface plasmons, the energy is efficiently transferred through the hole, and finally re-radiated again at the rear side in a similar way as described on the example of metallic slits. 
+%  % predicted by Bethe's law of inverse fourth power of 
 
 Periodical arrangement of the holes is equivalent to structuring of the surroundings of a single hole. In line with the already demonstrated resonance in a metallic sheet with infinite slits, the metallic sheet with holes exhibits a resonance slightly below the diffraction edge which leads to a great drop in reflection. The exact behaviour of the structure is determined by the  metal thickness, dimensions of the holes, their spacing in the $x$-$y$ plane and the spacing of the metallic sheets along the $z$-axis.
 
