--- a/intro.tex
+++ b/intro.tex
@@ -131,6 +131,7 @@ Abbreviation & Meaning	\\
 1-D, 2-D, 3-D & One-, two- and three-dimensional \\
 CDH			& Current-Driven Homogenisation\\
 EDB			& (Formulation of Maxwell equations using the $\E$, $\D$ and $\B$ vectors)\\
+EOT			& Extraordinary optical transmission \\
 FDFD 		& Finite-difference frequency-domain (algorithm)\\
 FDM 		& Filter diagonalisation method (algorithm)\\
 FDTD 		& Finite-difference time-domain (algorithm)\\
