sync FK theory t4

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -2027,6 +2027,13 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1992}
 }
 
+@misc{metamorphose-web,
+	author = {{The Metamorphose collaboration}},
+	title = {Metamaterials - Definition},
+	howpublished={Online},
+	url={http://www.metamorphose-vi.org/index.php/metamaterials},
+	note={last visited {December} 2015},}
+}
 @misc{moroz2011,
 	author = {Moroz, A},
 	title = {Drude model parameters},
