--- a/intro.tex
+++ b/intro.tex
@@ -23,7 +23,7 @@ These deficiencies provide additional reasons to search for the new possibilitie
 
 %}}}
 
-\section{Goals of the thesis}
+\section{Goals of the thesis}%{{{
 \begin{enumerate}
 \item{During the preparation of the thesis, its author encountered difficulties finding a focused, accessible, yet rigorous enough tutorial covering the necessary theory. The main aim of the theoretical section therefore lies in bridging the fundamental electrodynamics with the concepts used for description of metamaterials and photonic crystals.} 
 \item{The importance of the more general \textit{spatially-dispersive} electrodynamics is emphasized, although it is unfortunately often neglected in the literature in favor of the simpler \textit{local} electrodynamics. Both approaches are compared throughout the thesis.} 
@@ -31,7 +31,7 @@ These deficiencies provide additional reasons to search for the new possibilitie
 \item{A overview of the electromagnetic behaviour of diverse periodic structures is provided in the Results section, taking into account also the properties of materials available for THz photonics, with the realistic level of absorption in particular. This section is more than just results -- proceeding from simpler structures to the more complex ones, it aims to explain all observed phenomena in a didactic manner. Some of the simulations are verified against the experimental results from the terahertz measurements.} 
 \item{Last but not least, the numerical results present a small demonstration of the use of the extensive simulation scripts, which were developed solely for the thesis and are published online free of charge. The basic concepts of the numerical simulations are described to help others in adapting the simulations for their further research. } 
 \end{enumerate}
-
+%}}}
 \section{Thesis outline}
 \paragraph{Theory} %{{{
 The theoretical chapter starts with a review of linear \textit{electrodynamics of continuous media}; the concepts of harmonic oscillators, dispersion curves, and isofrequency contours are introduced. The generalized index of refraction is introduced, and it is demonstrated how the wave refraction depends on the shape of isofrequency contours.
