--- a/result.tex
+++ b/result.tex
@@ -1000,9 +1000,11 @@ The relevant papers (Refs. \cite{shi2007, peng2007, vynck2009all, rybin2014photo
 
 %}}}
 \paragraph{Implications for all-dielectric negative-index metamaterials} %{{{
-In Refs.  \cite{rybin2014photonic} and \cite{dominec2014transition}, the structure behaviour is described as metamaterial-like, when the lowest band gap contains one or both Mie resonances. Otherwise, when the first band gap is of Bragg type, the structure is classified among photonic crystals. This is however a rather formal notation. The terminology difference has been discussed in the theoretical section, with the conclusion that one structure can be a representative of metamaterials and photonic crystals simulaneously, depending on the paradigm one prefers to use for its description. 
- 
-%% TODO add:  the disappearance of resonances is an objective reality; the resonant skips in $\Neff'$ are required to fulfill the Kramers-Kronig relations of itts spectra
+In Refs.  \cite{rybin2014photonic} and \cite{dominec2014transition}, the structure behaviour is described as metamaterial-like, when the lowest band gap contains one or both Mie resonances. Otherwise, when the first band gap is of Bragg type, the structure is classified among photonic crystals. 
+This is a rather formal notation, based on the \textit{phase criterion} introduced on page \pageref{phasecriterion}. 
+The disappearance of resonances in the spectra is however an objective reality; the resonant skips in $\Neff'$ are required to fulfill the Kramers-Kronig relations. 
+The terminology difference has been discussed in the theoretical section, with the conclusion that one structure can be a representative of metamaterials and photonic crystals simulaneously, depending on the paradigm one prefers to use for its description. 
+
 
 A sufficiently high permittivity can be found in the microwave and terahertz ranges, in a variety of materials, for example in titanium dioxide with $\varepsilon_r \approx 92$ \cite{nemec2009tunable} or in various ferroelectrics like strontium titanate \cite{skoromets2011tuning}. However, practical applications of the high-permittivity dielectrics in the THz range can be restricted by high dielectric losses due to low-frequency phonon absorption tails. To our knowledge, there is no material providing such a high permittivity in the near-infrared or optical ranges. This eliminates the possibility to build a MM at these frequencies with $\Neff'<0$ based on dielectric rods.
 
