--- a/title.tex
+++ b/title.tex
@@ -83,19 +83,19 @@ Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, com
 \chapter*{Abstrakt}
 \noindent ~
 % TODO přeložit
-Při setkání elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby interagovaly s vlnami žádoucím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je pro terahertzovou techniku, kde můžou překlenout poměrně slabé výsledky klasických metod.  
+Při interakci elektromagnetických vln s periodickými strukturami lze pozorovat neobvyklé jevy, jako je záporný index lomu, fotonický zakázaný pás nebo silná prostorová disperze. Tyto struktury mohou být navrženy tak, aby se chovaly žádoucím způsobem, a označují se buďto jako metamateriály nebo jako fotonické krystaly. Část z jejich navrhovaných využití je v technice terahertzových vln, kde můžou překlenout poměrně slabé možnosti klasických součástek.  
 
-Teoretický základ práce vychází z elektrodynamiky prostředí s klasickou disperzí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se nezřídka uvažuje.
+Teoretický základ práce vychází z elektrodynamiky prostředí s klasickou frekvenční disperzí, která je dále zobecněna na prostředí s prostorovou disperzí a na Blochovu-Floquetovu teorii vln v periodických strukturách. Závěr teoretické části se pokouší vyjasnit pojmy používané v literatuře a ukázat, že myšlenky metamateriálů i fotonických krystalů jsou ve skutečnosti starší, než se často uvádí.
 
-Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v časové doméně. V některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v časové doméně.
+Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v časové doméně (FDTD). V některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v časové doméně.
 
-Cílem pro srovnání rozličných struktur obsažené v této práci je srozumitelnou formou ukázat a okomentovat nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Dalším cílem předložených výsledků je doložit schopnosti prostředí pro simulace, které autor vyvinul a uveřejnil na internetu s úmyslem motivovat další výzkum v této oblasti. 
+Srovnání  různých struktur si klade za cíl srozumitelnou formou ukázat a okomentovat nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Dalším cílem předložených výsledků je doložit schopnosti prostředí pro simulace, které autor vyvinul a uveřejnil na internetu s úmyslem motivovat další výzkum v této oblasti. 
 
 \vspace{0mm}
 %\chapter*{Abstract} 
 {\let\clearpage\relax\chapter*{Abstract}}
 \noindent
-Unusual phenomena such as negative index of refraction, photonic band gaps, or strong spatial dispersion are observed when electromagnetic waves interact with periodic structures. These can be designed to manipulate the wave in an advantageous way, and are known either as metamaterials or photonic crystals. Part of their proposed applications are for the terahertz technology, where they may address relatively poor performance of classical approaches.
+Unusual phenomena such as negative index of refraction, photonic band gaps, or strong spatial dispersion are observed when electromagnetic waves interact with periodic structures. These can be designed to manipulate the wave in an advantageous way, and are known either as metamaterials or photonic crystals. Part of their proposed applications are for the terahertz technology, where they may address relatively poor performance of classical components.
 
 The theoretical background is derived from the electrodynamics of media with classical dispersion, which is later generalized to spatially dispersive media and to the Bloch-Floquet theory of waves in periodic structures. The end of the theoretical part attempts to clarify the terminology used in the literature, and to show that the concepts of metamaterials and photonic crystals are in fact older than is sometimes assumed.
 
@@ -117,7 +117,7 @@ Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me about
 
 Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims and with my stubborn attitude towards some of their good advices.
 
-The numerical results presented in the thesis could be hardly obtained without the hard work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007} and computations were based on MEEP \cite{oskooi2010meep} and MPB programs \cite{johnson2001mpb}. 
+The numerical results presented in the thesis could be hardly obtained without the work of hundreds of volunteers contributing to the open-source scientific software: Most of the plots were made using the Matplotlib library \cite{hunter2007} and computations were based on MEEP \cite{oskooi2010meep} and MPB programs \cite{johnson2001mpb}. 
 
 This work was financially supported by the Czech Science Foundation under Grant No. 14-25639S.
 
